[tool.poetry]
name = "hw11"
version = "0.1"
description = "-"
authors = ["Your Name <you@example.com>"]
license = "Mit License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
alembic = "^1.12.0"
psycopg2 = "^2.9.9"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
fastapi = "^0.103.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
